--- a/hstc_interface/.settings/org.eclipse.core.resources.prefs
+++ b/hstc_interface/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/com/controller/RecruitmentController.java=UTF-8
+encoding//src/com/controller/UploadController.java=UTF-8
 encoding//src/com/service/RecruitmentService.java=UTF-8
