--- a/hstc_interface/WebContent/WEB-INF/web.xml
+++ b/hstc_interface/WebContent/WEB-INF/web.xml
@@ -5,9 +5,9 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee   
     http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">  
   <display-name></display-name>  
-  <!-- <welcome-file-list>
-  	<welcome-file>/login.jsp</welcome-file>
-  </welcome-file-list>  -->
+  <welcome-file-list>
+  	<welcome-file>/index.jsp</welcome-file>
+  </welcome-file-list> 
     
   <!-- 加载spring容器 -->  
     <context-param>  
