--- a/hstc_interface/.settings/org.eclipse.core.resources.prefs
+++ b/hstc_interface/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,9 @@
 eclipse.preferences.version=1
+encoding//src/com/controller=UTF-8
+encoding//src/com/controller/CollectController.java=UTF-8
 encoding//src/com/controller/RecruitmentController.java=UTF-8
 encoding//src/com/controller/UploadController.java=UTF-8
+encoding//src/com/controller/UserController.java=UTF-8
+encoding//src/com/service=UTF-8
 encoding//src/com/service/RecruitmentService.java=UTF-8
+encoding/<project>=UTF-8
